Update executive committee member position

--- a/_data/execcommittee.yml
+++ b/_data/execcommittee.yml
@@ -1,6 +1,6 @@
-- name: Joshua 'Bitches' Masanganise
+- name: Joshua Masanganise
   member: 1002
-  position: Nice President of Internal Affairs
+  position: Vice President of Internal Affairs
   image: /assets/img/committee-members/joshua_masanganise.png
   email: davidyehudah14@gmail.com
   phone-number: +263784957821
