--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,3 +1,5 @@
+local_backend: true
+
 backend:
   name: git-gateway
   branch: main # Branch to update (master by default)
@@ -21,5 +23,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Summary", name: "summary", widget: "string", required: false}
       - {label: "Post Image", name: "image", widget: "string", required: true}
       - {label: "Standing Committee", name: "standing-committee", widget: "select", options: ["SCORA", "SCOPE", "SCORE", "SCOPH", "SCOME", "SCORP"], required: true}
-    meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
+    
