--- a/_data/execcommittee.yml
+++ b/_data/execcommittee.yml
@@ -9,6 +9,7 @@
 - name: Anna Munir
   member: 1006
   position: SCORE Director
+  bio: something
   image: /assets/img/committee-members/anna_munir.jpg
   email: davidyehudah14@gmail.com
   phone-number: +263784957821
