--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,8 @@
 baseurl: "/"
-url: https://zimsa.org
+url: https://zimsa.org.zw
 title: Zimsa
 timezone: UTC
-# collections:
-#   posts:
-#     title: Posts
-#     output: true
-#   uploads:
-#     title: Uploads
-#     output: true
-description: "New Age Motors is a trusted Car Repair Centre offering reliable auto repair and maintenance services, from routine oil changes and brake repairs to advanced diagnostics and engine work. Our expert technicians ensure quality and customer satisfaction, giving you confidence on the road."
+description: "The official website of the Zimbabwe Medical Students Association (ZIMSA) is a comprehensive platform dedicated to empowering medical students across Zimbabwe. It serves as a hub for resources, events, and networking opportunities that support professional growth and academic excellence. Explore updates on workshops, conferences, and outreach programs designed to enhance medical education and healthcare delivery. The site also showcases ZIMSA's departments, leadership structure, and initiatives aimed at fostering collaboration and community impact among future healthcare professionals."
 author: "Zimsa"
 email: "pro@zimsa.org.zw"
 phone: "+263 77 189 0416"
@@ -20,5 +13,3 @@ social:
   instagram: "https://instagram.com/zimsa"
   whatsapp: "https://wa.me/263771890416"
   linkedin: "https://linkedin.com/zimsa"
-plugins:
-- jekyll-feed
