--- a/admin/config.yml
+++ b/admin/config.yml
@@ -88,6 +88,7 @@ collections: # A list of collections the CMS should be able to edit
   - name: "committee"
     label: "Committee Members"
     folder: "_data/committee"
+    slug: "{{name}}-{{position}}" # Filename format
     create: true
     fields:
       - { name: "name", label: "Name", widget: "string" }
