added options for social links

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -42,25 +42,12 @@ collections: # A list of collections the CMS should be able to edit
     create: true
     slug: "{{slug}}"
     fields:
-      - label: "Program Name"
-        name: "name"
-        widget: "string"
-      - label: "Permalink"
-        name: "permalink"
-        widget: "hidden"
-        default: "{{slug}}"
-      - label: "Description"
-        name: "description"
-        widget: "markdown"
-      - label: "Featured Image"
-        name: "image"
-        widget: "image"
-      - label: "Contact Email"
-        name: "email"
-        widget: "string"
-      - label: "Contact Phone"
-        name: "phone"
-        widget: "string"
+      - {label: "Program Name", name: "name", widget: "string"}
+      - {label: "Permalink", name: "permalink", widget: "hidden", default: "{{slug}}"}
+      - {label: "Description",name: "description", widget: "markdown"}
+      - {label: "Featured Image", name: "image", widget: "image"}
+      - {label: "Contact Email", name: "email", widget: "string"}
+      - { label: "Contact Phone",  name: "phone", widget: "string",}
       - label: "Committee Member In Charge"
         name: "committee_member"
         widget: "relation"
@@ -75,7 +62,14 @@ collections: # A list of collections the CMS should be able to edit
         fields:
           - label: "Platform"
             name: "platform"
-            widget: "string"
+            widget: "select"
+            options:
+              - label: "Facebook"
+                value: "facebook"
+              - label: "Instagram"
+                value: "instagram"
+              - label: "YouTube"
+                value: "youtube"
           - label: "URL"
             name: "url"
             widget: "string"
