fixed address in the website

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ title: "Zimsa"
 timezone: "UTC"
 description: "The official website of the Zimbabwe Medical Students Association (ZIMSA) is a comprehensive platform dedicated to empowering medical students across Zimbabwe. It serves as a hub for resources, events, and networking opportunities that support professional growth and academic excellence. Explore updates on workshops, conferences, and outreach programs designed to enhance medical education and healthcare delivery. The site also showcases ZIMSA's departments, leadership structure, and initiatives aimed at fostering collaboration and community impact among future healthcare professionals."
 author: "Zimsa"
-email: "pro@zimsa.org.zw"
-phone: "+263 77 189 0416"
-address: "1234 New Age Street, Harare, Zimbabwe"
+email: "pro@zimsa.org"
+phone: "+263 77 886 8328"
+address: GELFAND-RITCHEN HOUSE, P.O. Box 3671, 172 Baines Ave, Harare, Zimbabwe
 social:
   twitter: "https://twitter.com/zimsa"
   facebook: "https://facebook.com/zimsa"
